# AIhub_ALPHA_v0.0.1

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  models_registry.json  pyproject.toml  requirements.txt
aihub/: chat.py  cli.py  config.py  console.py  hardware.py  hf_client.py  history.py  image.py  memory.py  models.py  ollama_client.py  tui.py  video.py
aihub/tools/: __init__.py  file_ops.py  file_search.py  terminal.py  web_search.py
