[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aihub"
version = "0.1.4"
description = "AIHub 0.1.4 — Hardware-aware chat/agentic model browser with Textual TUI, memory, and tool calling"
readme = "README.md"
authors = [{ name = "AIHub Contributors" }]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "psutil>=5.0.0",
    "questionary>=2.0.0",
    "prompt_toolkit>=3.0.0",
    "textual>=0.50.0",
    "gputil>=1.4.0",
    "py-cpuinfo>=9.0.0",
    "wmi>=1.5.1; sys_platform == 'win32'"
]

[project.scripts]
aihub = "aihub.cli:app"

[tool.setuptools]
packages = ["aihub"]
